yaml/istio/istio-front-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front
spec:
  hosts:
  - "demo-app.com"
  gateways:
  - demo-app
  http:
  - route:
    - destination:
        host: front
        subset: prod
      weight: 100
    - destination:
        host: front
        subset: canary
      weight: 0   
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front
spec:
  host: front
  subsets:
  - name: prod
    labels:
      app: front-v1
  - name: canary
    labels:
      app: front-v2
